Fixed less spacing issue. Fixed valueHasMutated reference. Fixed styling for read only description areas.

--- a/CodeCamper.Web/Content/styles.less
+++ b/CodeCamper.Web/Content/styles.less
@@ -190,6 +190,7 @@ body {
 	min-height: 100px;
 	padding: 20px;
 }
+
 .article-container-full-width {
     margin: 4px;
     float: left;
@@ -353,12 +354,12 @@ nav label,
 small {
 	color: gray;
 	text-transform: uppercase;
+}
 
-    .tips {
-        text-transform: none;
-        font-size: 80%;
-        color: @accent-color;
-    }
+small.tips {
+    text-transform: none;
+    font-size: 80%;
+    color: @accent-color;
 }
 
 nav {
@@ -380,7 +381,7 @@ button {
 	color: @inverted-text-color;
 	font-size: 100%;
 	margin: 0px;
-	padding: 7px 30px 8px 50px;
+	padding: 4px 30px 8px 50px;
     cursor: pointer;
     height: 33px;
 }
